<resources>
    <string name="app_name">Adogtame</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombreApp">Adogtame</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="entrar">Entrar</string>
    <string name="registrate">Registrate</string>
    <string name="ciudad">Ciudad</string>
    <string name="adoptar">Adoptar</string>
    <string name="apadrinar">Apadrinar</string>
    <string name="cuanto_donar">¿Cuanto desea donar?</string>
    <string name="descripcion">Descripción</string>
    <string name="titulo_spinner">Escoja un valor</string>

    <string-array name="valores_donacion">
        <item>$10.000</item>
        <item>$20.000</item>
        <item>$30.000</item>
        <item>$40.000</item>
        <item>$50.000</item>
    </string-array>


    <!--Pestañas -->
    <string name="title_catalogo">Catálogo</string>
    <string name="title_donaciones">Donaciones</string>
    <string name="title_seguimiento">Seguimiento</string>
    <string name="title_voluntariado">Voluntariado</string>


    <!--Alertas -->
    <string name="implementos">Implementos de aseo</string>
    <string name="alimento">Alimento</string>
    <string name="donar">Donar</string>
    <string name="confirmar">Confirmar</string>
    <string name="cancelar">Cancelar</string>
    <string name="ok">Ok</string>
    <string name="confirmacion">Confirmar donación</string>
    <string name="title_alerta_voluntariado">Fundacion %s</string>
    <string name="mensaje_alerta_voluntariado">Gracias por ser parte del cambio. Nuestros horarios son: %s</string>
    <string name="title_adopcion">Gracias por adoptar a </string>
    <string name="mensaje_adopcion">Se ha enviado un correo a tu email con el formulario de adopcion</string>

    <!--Mensajes backend-->
    <string name="error_servidor_registro">Error al conectarse al servidor</string>
    <string name="error_registro_usuario">Error al registrar usuario</string>
    <string name="registro_exitoso">El registro ha sido exitoso</string>
    <string name="registro_existente">El usuario ya se encuentra registrado</string>
    <string name="campos_vacios">Por favor ingrese datos en todos los campos</string>
    <string name="login_incorrecto">Email o password incorrectos</string>
    <string name="validacion_donacion">Por favor elija una opcion de destino y valor de donacion</string>
    <string name="apadrinaado_existe">Ya has apadrinado a</string>
    <string name="apadrinar_mascota">Has apadrinado a</string>
    <string name="cargando">Cargando..</string>


</resources>
