<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>
        <variable
            name="fundacion"
            type="com.example.anitamarin.adogtame.models.Fundaciones"/>
        <variable
            name="handler"
            type="com.example.anitamarin.adogtame.DetallePagoActivity"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.anitamarin.adogtame.DetallePagoActivity">


        <ImageView
            android:id="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="@dimen/img_parallax"
            android:layout_marginTop="@dimen/no_margin"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/letra_texto"
            android:text="@string/cuanto_donar"
            android:gravity="left"
            android:padding="@dimen/small"
            android:layout_marginTop="@dimen/big_magin" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/valores_donacion"
            android:prompt="@string/titulo_spinner"
            android:spinnerMode="dropdown"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            >

            <CheckBox
                android:layout_marginTop="@dimen/no_margin"
                android:id="@+id/check_alimento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alimento"
                android:layout_marginLeft="@dimen/small" />

            <CheckBox
                android:id="@+id/check_implementos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/implementos"
                android:layout_marginLeft="@dimen/small" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_donar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/donar"
            style="@style/Widget.AppCompat.Button.Colored"
            android:onClick="@{() -> handler.donar()}"
            />

    </LinearLayout>

</layout>

