<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>
        <variable
            name="handler"
            type="com.example.anitamarin.adogtame.RegistroActivity"/>
    </data>

    <FrameLayout android:layout_height="match_parent"
        android:layout_width="match_parent"
        >

        <ImageView
            android:src="@drawable/logo"
            android:layout_width="@dimen/logo"
            android:layout_height="@dimen/logo" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/fondoreg"
            android:alpha="0.3"
            android:scaleType="centerCrop" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.example.anitamarin.adogtame.LoginActivity"
            android:orientation="vertical"
            android:stretchColumns="*">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/nombreApp"
                android:textSize="@dimen/nombreApp"
                android:textColor="@color/colorAccent"
                android:gravity="center"
                android:layout_marginTop="@dimen/marginNombreApp"
                 />

            <LinearLayout
                android:orientation="vertical"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:gravity="center"
                android:padding="@dimen/small">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/small"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >

                        <ImageView
                            android:layout_width="@dimen/icon"
                            android:layout_height="@dimen/icon"
                            app:srcCompat="@drawable/ic_person"
                            />

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/email_registro"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:hint="@string/email"
                            />

                    </LinearLayout>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/small"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >

                        <ImageView
                            android:layout_width="@dimen/icon"
                            android:layout_height="@dimen/icon"
                            app:srcCompat="@drawable/ic_pass"
                            />

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/password_registro"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:hint="@string/password" />

                    </LinearLayout>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >

                        <ImageView
                            android:layout_width="@dimen/icon"
                            android:layout_height="@dimen/icon"
                            app:srcCompat="@drawable/ic_city"
                            />

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/ciudad_registro"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:hint="@string/ciudad" />

                    </LinearLayout>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

                <Button
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:id="@+id/registro"
                    android:text="@string/registrate"
                    android:onClick="@{()-> handler.goToCatalogo()}"
                    />

        </TableLayout>
    </FrameLayout>
</layout>


