<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>
        <variable
            name="mascota"
            type="com.example.anitamarin.adogtame.models.Mascotas"/>
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/small">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            >
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/icon_phone"
                        android:layout_width="@dimen/icon"
                        android:layout_height="@dimen/icon"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/icon_home"
                        app:srcCompat="@drawable/ic_phone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginBottom="8dp" />

                    <ImageView
                        android:id="@+id/icon_home"
                        android:layout_width="@dimen/icon"
                        android:layout_height="@dimen/icon"
                        app:srcCompat="@drawable/ic_home"
                        tools:layout_editor_absoluteY="8dp"
                        tools:layout_editor_absoluteX="8dp"
                        android:layout_marginLeft="8dp"
                        />

                    <TextView
                        android:id="@+id/fundacion"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="0dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:text="@{mascota.fundacion}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        app:layout_constraintBottom_toBottomOf="@+id/icon_home"
                        app:layout_constraintLeft_toRightOf="@+id/icon_home"
                        app:layout_constraintRight_toRightOf="parent"
                        tools:text="Fundacion" />

                    <TextView
                        android:id="@+id/contacto"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="0dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:text='@{""+ mascota.contacto}'
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        app:layout_constraintBottom_toBottomOf="@+id/icon_phone"
                        app:layout_constraintLeft_toRightOf="@+id/icon_phone"
                        app:layout_constraintRight_toRightOf="parent"
                        tools:text="Contacto" />
                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/descripcion"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@{mascota.descripcion}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/titulo_descripcion"
                        tools:text="Descripción" />

                    <TextView
                        android:id="@+id/titulo_descripcion"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/descripcion"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/adoptar"
                />

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/apadrinar"
                />

        </LinearLayout>

    </LinearLayout>
</layout>

